<resources>
    <string name="app_name">Simple notes</string>
    <string name="sort">Sort</string>
    <string name="az">A->Z</string>
    <string name="za">Z->A</string>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="all">All</string>
    <string name="folders">Folder</string>
    <string name="no_data">No data available</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="content">Content</string>
    <string name="add_note">Add new notes</string>
    <string name="notes_detail">Notes detail</string>
    <string name="clear">Clear</string>
    <string name="photos">Photos</string>
    <string name="security">Security</string>
    <string name="imports">Import</string>
    <string name="exports">Export</string>
    <string name="none">None</string>
    <string name="no_lock">No lock</string>
    <string name="pin">PIN</string>
    <string name="pin_detail">Enter a numeric PIN to unlock</string>
    <string name="voice">Voice</string>
    <string name="camera">Camera</string>
    <string name="style">Style</string>
    <string name="more">More</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="create_pin_code">Create PIN code</string>
    <string name="input_pin_code">Input PIN code</string>
    <string name="wrong_pin">Wrong PIN , please try again !</string>
    <string name="save_success">Save new notes success</string>
    <string name="update_success">Update notes success</string>
    <string name="save_fail_empty">Content must have data</string>
    <string name="save_fail">Can not save , please try again</string>
    <string name="update_fail">Can not update , please try again</string>
    <string name="clear_success">Clear text success</string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="add_folder_hint">Please input folder name</string>
    <string name="add_folder_empty">Folder name can not empty</string>
    <string name="search">Search</string>
    <string name="preview">Preview</string>
    <string name="add_folder_exits">Folder name already exits</string>
    <string name="input_pin_new">Please input your new PIN code</string>
    <string name="input_pin">Please input your current PIN code</string>
    <string name="input_pin_confirm">Please confirm your PIN code</string>
    <string name="error_length_pin">Length of PIN must more than 4 character</string>
    <string name="error_confirm_pin">Confirm PIN does not match</string>
    <string name="create_pin_success">Create PIN code success</string>
    <string name="show_pin">Show your PIN?</string>
    <string name="next">Next</string>
    <string name="add_folder_length_long">Length of folder name can not over 12 character</string>
    <string name="add_folder_success">Add new folder success</string>
    <string name="add_folder_fail">Can not add new folder</string>
    <string name="save_your_note">Save your notes?</string>
    <string name="update_your_note">Update your notes?</string>
    <string name="select_folder">Select folder</string>
    <string name="select_sort_type">Select sort types</string>
    <string name="delete_notes">Delete notes?</string>
    <string name="yes">YES</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="delete_all">Delete all</string>
    <string name="move">Move</string>
    <string name="move_to">Move to?</string>
    <string name="del_folder_note">After inspection, discovered more than one notes exists in this folder . What do you want to do with them ?</string>
    <string name="del_folder_success">Delete folder success</string>
    <string name="permission_storage">SimpleNotes needs to access your external storage to perform this action </string>
    <string name="permission_camera">SimpleNotes needs to access your camera to perform this action </string>
    <string name="not_rename_folder">This folder can not rename</string>
    <string name="not_delete_folder">This folder can not delete</string>
    <string name="empty_notes">Your notes is empty</string>
    <string name="exporting">Exporting ... </string>
    <string name="export_success">Export success</string>
    <string name="export_fail">Export fail , please try again</string>
    <string name="adding_file">Adding file: </string>
    <string name="checking_image">Checking and copy image ... </string>
    <string name="clear_export_folder">Clearing old export ... </string>
    <string name="export_excel">Export Excel file ... </string>
    <string name="create_guide">Create Guide file ... </string>
    <string name="zip_data">Zip export data ... </string>
    <string name="finish_export">Finishing export ... </string>
    <string name="guide_export">
        <![CDATA[
<p><strong>Simple Note</strong></p>
<p><strong>Warning</strong></p>
<p>&nbsp; &nbsp;The zip file after export success for use by Simple note.</p>
<p>&nbsp; &nbsp;Only Simple note can read it exactly.</p>
<p>&nbsp; &nbsp;Simple Note will not be responsible for the skewed data when using any other application to manipulate.</p>
<p>&nbsp; &nbsp;Please do not edit any file in the zip any way.</p>
<p>&nbsp;</p>
<p><strong>File detail</strong></p>
<p>&nbsp; &nbsp;The general file name is : Export_"yyyyMMdd_HHmmss".zip .</p>
<p>&nbsp; &nbsp;For example : file name "Export_20160201_130530.zip" is mean : The Export file are create at 13 hours 05 minutes 30 seconds, and on 02 May 01 2016</p>
<p>&nbsp;</p>
<p><strong>In the Zip file contain</strong></p>
<p>&nbsp; &nbsp;1/ Data.xls (Notes export)</p>
<p>&nbsp; &nbsp;2/ Image folder (All image using in Notes)</p>
<p>&nbsp;</p>
<p>Thanks and best regard</p>
<p>Simple Note team.</p>
<p>&nbsp;</p>
        ]]>
    </string>
</resources>
