<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dialog_margin"
    android:background="@drawable/dialog_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dialog_button_margin_top"
        android:background="@color/colorAccent"
        android:gravity="left"
        android:padding="@dimen/dialog_button_margin_top"
        android:text="@string/select_sort_type"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rgSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_line_margin">

        <RadioButton
            android:id="@+id/rdNewest"
            android:textColor="@color/black"
            android:textSize="@dimen/app_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newest" />

        <RadioButton
            android:id="@+id/rdOldest"
            android:textColor="@color/black"
            android:textSize="@dimen/app_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oldest" />

        <RadioButton
            android:id="@+id/rdAZ"
            android:textColor="@color/black"
            android:textSize="@dimen/app_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/az" />

        <RadioButton
            android:id="@+id/rdZA"
            android:textColor="@color/black"
            android:textSize="@dimen/app_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/za" />

    </RadioGroup>
</LinearLayout>