<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="horizontal"
    android:id="@+id/parent"
    android:paddingTop="@dimen/view_line_margin"
    android:paddingBottom="@dimen/view_line_margin">

    <LinearLayout
        android:id="@+id/btnSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort"
            android:textColor="@color/white"
            android:textSize="@dimen/app_text_size" />

        <TextView
            android:id="@+id/txtSortStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newest"
            android:textColor="@color/grey_100"
            android:textSize="@dimen/app_text_size_small" />
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/view_line_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/view_line_margin"
        android:background="@color/white" />


    <LinearLayout
        android:id="@+id/btnFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/folders"
            android:textColor="@color/white"
            android:textSize="@dimen/app_text_size" />

        <TextView
            android:id="@+id/txtFolderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:textColor="@color/grey_100"
            android:textSize="@dimen/app_text_size_small" />
    </LinearLayout>
</LinearLayout>