<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dialog_margin"
    android:background="@drawable/dialog_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/btnBlue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@color/blue_50"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:id="@+id/btnRed"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@color/red_50"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:id="@+id/btnGreen"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@color/green_50"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:id="@+id/btnOrange"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@color/orange_50"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:id="@+id/btnYellow"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@color/yellow_50"
            android:orientation="horizontal"></LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/btnBrown"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@color/brown_50"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:id="@+id/btnWhite"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@color/white"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:id="@+id/btnPink"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@color/pink_50"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:id="@+id/btnPurple"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@color/purple_50"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:id="@+id/btnBlueGrey"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@color/blue_grey_50"
            android:orientation="horizontal"></LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/preview"
            android:textColor="@color/black"
            android:textSize="@dimen/app_text_size" />

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dialog_button_margin_top"
            android:layout_marginTop="@dimen/dialog_button_margin_top"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dialog_button_margin_top"
                android:layout_weight="0.5"
                android:background="@drawable/dialog_background"
                android:gravity="center"
                android:padding="@dimen/dialog_button_margin_top"
                android:text="@string/cancel"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btnConfirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dialog_button_margin_top"
                android:layout_weight="0.5"
                android:background="@drawable/dialog_background"
                android:gravity="center"
                android:padding="@dimen/dialog_button_margin_top"
                android:text="@string/confirm"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>